--- a/landing-page-christmas/index.html
+++ b/landing-page-christmas/index.html
@@ -113,7 +113,134 @@
         <!--- ====== ACCESSORIES=======-->
         <section class="accessory section bd-container" id="accessory">
             <h2 class="section-title">New Christmas <br> Accessories</h2>
+            <div class="accessory__container bd-grid">
+                <div class="accessory__content">
+                    <img src="assets/images/accessory1.png" alt="" class="accessory__img">
+                    <h3 class="accessory__title">Snow Globe</h3>
+                    <span class="accessory__category">Accessory</span>
+                    <span class="accessory__price">$9.45</span>
+                    <a href="#" class="button accessory__button">
+                        <i class="bx bx-heart"></i>
+                    </a>
+                </div>
+                <div class="accessory__content">
+                    <img src="assets/images/accessory2.png" alt="" class="accessory__img">
+                    <h3 class="accessory__title">Candy</h3>
+                    <span class="accessory__category">Accessory</span>
+                    <span class="accessory__price">$2.45</span>
+                    <a href="#" class="button accessory__button">
+                        <i class="bx bx-heart"></i>
+                    </a>
+                </div>
+                <div class="accessory__content">
+                    <img src="assets/images/accessory3.png" alt="" class="accessory__img">
+                    <h3 class="accessory__title">Angel</h3>
+                    <span class="accessory__category">Accessory</span>
+                    <span class="accessory__price">$13.45</span>
+                    <a href="#" class="button accessory__button">
+                        <i class="bx bx-heart"></i>
+                    </a>
+                </div>
+                <div class="accessory__content">
+                    <img src="assets/images/accessory4.png" alt="" class="accessory__img">
+                    <h3 class="accessory__title">Sphere</h3>
+                    <span class="accessory__category">Accessory</span>
+                    <span class="accessory__price">$4.25</span>
+                    <a href="#" class="button accessory__button">
+                        <i class="bx bx-heart"></i>
+                    </a>
+                </div>
+                <div class="accessory__content">
+                    <img src="assets/images/accessory4.png" alt="" class="accessory__img">
+                    <h3 class="accessory__title">Surprise Gift</h3>
+                    <span class="accessory__category">Accessory</span>
+                    <span class="accessory__price">$9.45</span>
+                    <a href="#" class="button accessory__button">
+                        <i class="bx bx-heart"></i>
+                    </a>
+                </div>
+            </div>
         </section>
+        <!--========== SEND GIFT ===========-->
+        <section class="send section">
+            <div class="send__container bd-container bd-grid">
+               <div class="send__content">
+                    <h2 class="section-title-center send__title">
+                        Send Gift Now
+                    </h2>
+                    <p class="send__description">
+                        Start giving away before the holidays are over. 
+                        Write the home address of the person who will send the gift
+                    </p>
+                    <form action="">
+                        <div class="send__direction">
+                            <input type="text" placeholder="House address" class="send__input">
+                            <a href="#" class="button">Send</a>
+                        </div>
+                    </form>
+                </div>
+                <div class="send__img">
+                    <img src="assets/images/send.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!--=========== FOOTER ===========-->
+        <footer class="footer section">
+            <div class="footer__container bd-container bd-grid">
+                <div class="footer__content">
+                    <h3 class="footer__title">
+                        <a href="#" class="footer__logo">
+                            Christmas Gift
+                        </a>
+                    </h3>
+                    <p class="footer__description">
+                        I sent a gift and it gives <br> 
+                        happiness
+                    </p>
+                </div>
+                <div class="footer__content">
+                    <h3 class="footer__title">Our Services</h3>
+                    <ul>
+                        <li>
+                            <a href="#" class="footer__link">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Discounts</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Shipping mode</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__content">
+                    <h3 class="footer__title">Our Company</h3>
+                    <ul>
+                        <li>
+                            <a href="#" class="footer__link">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">About us</a>
+                        </li>
+                        <li>
+                            <a href="#" class="footer__link">Our mission</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__content">
+                    <h3 class="footer__title">Social</h3>
+                    <a href="#" class="footer__social">
+                        <i class="bx bxl-facebook-circle"></i>
+                    </a>
+                    <a href="#" class="footer__social">
+                        <i class="bx bxl-twitter"></i>
+                    </a>
+                    <a href="#" class="footer__social">
+                        <i class="bx bxl-instagram-alt"></i>
+                    </a>
+                </div>
+            </div>
+            <p class="footer__copy">&#169; 2023 Bedimcode. All rights reserved</p>
+        </footer>
     </main>
     
     <!--========== FOOTER ================-->
