--- a/landing-page-christmas/index.html
+++ b/landing-page-christmas/index.html
@@ -11,18 +11,21 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!--=========== JAVASCRIPT ========-->
     <script src="./assets/javascript/script.js" defer></script>
+    <script src="./assets/javascript/scrollreveal.js" defer></script>
     <title>Christmas Landing Page</title>
 
 </head>
 <body>
-    <!--- SCROLL TOP -->
+    <!--================ SCROLL TOP =====================-->
     <a href="#" class="scrolltop" id="scroll-top">
         <i class="bx bx-up-arrow-alt scrolltop__icon"></i>
     </a>
-    <!--============= HEADER =============-->
+    <!--=================== HEADER =====================-->
     <header class="l-header" id="header">
+        <!----------- NAV -------------------->
         <nav class="nav bd-container">
             <a href="#" class="nav__logo">Christmas Gift</a>
+            <!---------- nav menu ------------->
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
@@ -32,218 +35,205 @@
                         <a href="#share" class="nav__link">Share</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#decoration" class="nav__link">Decorations</a>
+                        <a href="#decoration" class="nav__link">Decoration</a>
                     </li>
                     <li class="nav__item">
                         <a href="#accessory" class="nav__link">Accessory</a>
                     </li>
+                    <li>
+                        <i class="bx bx-toggle-left change-theme" id="theme-button"></i>
+                    </li>
                 </ul>
             </div>
+            <!-- nav toggle-->
             <div class="nav__toggle" id="nav-toggle">
                 <i class="bx bx-grid-alt"></i>
             </div>
         </nav>
     </header>
-    <!---============= MAIN ===============-->
-    <main class="l-main">
-        <!--- ======== HOME ===========-->
+    <!---============= MAIN ===========================-->
+    <main class="l-main" id="main">
+        <!---============ HOME =======================-->
         <section class="home" id="home">
             <div class="home__container bd-container bd-grid">
                 <div class="home__img">
-                    <img src="./assets/images/home.png" alt="">
+                    <img src="./assets/images/home.png" class="top_reveal top-reveal-item" alt="">
                 </div>
                 <div class="home__data">
-                    <h1 class="home__title">
+                    <h1 class="home__title top_reveal top-reveal-item">
                         Send A Gift For Christmas
                     </h1>
-                    <p class="home__description">
+                    <p class="home__description top_reveal top-reveal-item">
                         In these end of the year holidays send a gift to your loved one and share the happiness at Christmas.
                     </p>
-                    <a href="#" class="button">Get Started</a>
+                    <a href="#" class="button top_reveal top-reveal-item">Get Started</a>
                 </div>
             </div>
-
         </section>
-        <!--========= SHARE=============-->
+        <!--============== SHARE =====================-->
         <section class="share section bd-container" id="share">
             <div class="share__container bd-grid">
                 <div class="share__data">
-                    <h2 class="section-title-center">
+                    <h2 class="section-title-center right_reveal right-reveal-item">
                         Sharing Is The Best Gift <br> You Can Give
                     </h2>
-                    <p class="share__description">
+                    <p class="share__description right_reveal right-reveal-item">
                         Sharing these holidays is the best gift you can give, give a present or share your love with the people you love the most and celebrate with great happiness.
                     </p>
-                    <a href="#" class="button">Send a Gift</a>
+                    <a href="#" class="button right_reveal right-reveal-item">Send a Gift</a>
                 </div>
                 <div class="share__img">
-                    <img src="assets/images/shared.png" alt="">
+                    <img src="assets/images/shared.png" class="left_reveal left-reveal-item" alt="">
                 </div>
             </div>
         </section>
-        <!--======== DECORATION============-->
+        <!---============== DECORATION ====================-->
         <section class="decoration section bd-container" id="decoration">
             <h2 class="section-title">
                 Give Christmas Decorations <br> For Your Home
             </h2>
             <div class="decoration__container bd-grid">
                 <div class="decoration__data">
-                    <img src="assets/images/decoration1.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">
-                        Christmas Bell
-                    </h3>
-                    <a href="#" class="button button-link">Go Shopping</a>
+                    <img src="./assets/images/decoration1.png" alt="" class="decoration__img top_reveal top-reveal-item">
+                    <h3 class="decoration__title top_reveal top-reveal-item">Christmas Bells</h3>
+                    <a href="#" class="button button-link top_reveal top-reveal-item">Go Shopping</a>
                 </div>
                 <div class="decoration__data">
-                    <img src="assets/images/decoration2.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">
-                        Christmas Candies
-                    </h3>
-                    <a href="#" class="button button-link">Go Shopping</a>
+                    <img src="./assets/images/decoration2.png" alt="" class="decoration__img top_reveal top-reveal-item">
+                    <h3 class="decoration__title top_reveal top-reveal-item">Christmas Candies</h3>
+                    <a href="#" class="button button-link top_reveal top-reveal-item">Go Shopping</a>
                 </div>
                 <div class="decoration__data">
-                    <img src="assets/images/decoration3.png" alt="" class="decoration__img">
-                    <h3 class="decoration__title">
-                        Christmas Trees
-                    </h3>
-                    <a href="#" class="button button-link">Go Shopping</a>
+                    <img src="./assets/images/decoration3.png" alt="" class="decoration__img top_reveal top-reveal-item">
+                    <h3 class="decoration__title top_reveal top-reveal-item">Christmas Trees</h3>
+                    <a href="#" class="button button-link top_reveal top-reveal-item">Go Shopping</a>
                 </div>
             </div>
         </section>
-        <!--- ====== ACCESSORIES=======-->
+        <!--============== ACCESSORIES ===============-->
         <section class="accessory section bd-container" id="accessory">
-            <h2 class="section-title">New Christmas <br> Accessories</h2>
+            <h2 class="section-title">
+                New Christmas <br> Accessories
+            </h2>
             <div class="accessory__container bd-grid">
                 <div class="accessory__content">
-                    <img src="assets/images/accessory1.png" alt="" class="accessory__img">
-                    <h3 class="accessory__title">Snow Globe</h3>
-                    <span class="accessory__category">Accessory</span>
-                    <span class="accessory__price">$9.45</span>
-                    <a href="#" class="button accessory__button">
+                    <img src="./assets/images/accessory1.png" alt="" class="accessory__img top_reveal top-reveal-item">
+                    <h3 class="accessory__title top_reveal top-reveal-item">Snow Globe</h3>
+                    <span class="accessory__category top_reveal top-reveal-item">Accessory</span>
+                    <span class="accessory__price top_reveal top-reveal-item">$9.45</span>
+                    <a href="#" class="button accessory__button top_reveal top-reveal-item">
                         <i class="bx bx-heart"></i>
                     </a>
                 </div>
                 <div class="accessory__content">
-                    <img src="assets/images/accessory2.png" alt="" class="accessory__img">
-                    <h3 class="accessory__title">Candy</h3>
-                    <span class="accessory__category">Accessory</span>
-                    <span class="accessory__price">$2.45</span>
-                    <a href="#" class="button accessory__button">
+                    <img src="./assets/images/accessory2.png" alt="" class="accessory__img top_reveal top-reveal-item">
+                    <h3 class="accessory__title top_reveal top-reveal-item">Candy</h3>
+                    <span class="accessory__category top_reveal top-reveal-item">Accessory</span>
+                    <span class="accessory__price top_reveal top-reveal-item">$2.52</span>
+                    <a href="#" class="button accessory__button top_reveal top-reveal-item">
                         <i class="bx bx-heart"></i>
                     </a>
                 </div>
                 <div class="accessory__content">
-                    <img src="assets/images/accessory3.png" alt="" class="accessory__img">
-                    <h3 class="accessory__title">Angel</h3>
-                    <span class="accessory__category">Accessory</span>
-                    <span class="accessory__price">$13.45</span>
-                    <a href="#" class="button accessory__button">
+                    <img src="./assets/images/accessory3.png" alt="" class="accessory__img top_reveal top-reveal-item">
+                    <h3 class="accessory__title top_reveal top-reveal-item">Angel</h3>
+                    <span class="accessory__category top_reveal top-reveal-item">Accessory</span>
+                    <span class="accessory__price top_reveal top-reveal-item">$13.45</span>
+                    <a href="#" class="button accessory__button top_reveal top-reveal-item">
                         <i class="bx bx-heart"></i>
                     </a>
                 </div>
                 <div class="accessory__content">
-                    <img src="assets/images/accessory4.png" alt="" class="accessory__img">
-                    <h3 class="accessory__title">Sphere</h3>
-                    <span class="accessory__category">Accessory</span>
-                    <span class="accessory__price">$4.25</span>
-                    <a href="#" class="button accessory__button">
+                    <img src="./assets/images/accessory4.png" alt="" class="accessory__img top_reveal top-reveal-item">
+                    <h3 class="accessory__title top_reveal top-reveal-item">Sphere</h3>
+                    <span class="accessory__category top_reveal top-reveal-item">Accessory</span>
+                    <span class="accessory__price top_reveal top-reveal-item">$4.25</span>
+                    <a href="#" class="button accessory__button top_reveal top-reveal-item">
                         <i class="bx bx-heart"></i>
                     </a>
                 </div>
                 <div class="accessory__content">
-                    <img src="assets/images/accessory4.png" alt="" class="accessory__img">
-                    <h3 class="accessory__title">Surprise Gift</h3>
-                    <span class="accessory__category">Accessory</span>
-                    <span class="accessory__price">$9.45</span>
-                    <a href="#" class="button accessory__button">
+                    <img src="./assets/images/accessory5.png" alt="" class="accessory__img top_reveal top-reveal-item">
+                    <h3 class="accessory__title top_reveal top-reveal-item">Surprise gift</h3>
+                    <span class="accessory__category top_reveal top-reveal-item">Accessory</span>
+                    <span class="accessory__price top_reveal top-reveal-item">$7.99</span>
+                    <a href="#" class="button accessory__button top_reveal top-reveal-item">
                         <i class="bx bx-heart"></i>
                     </a>
                 </div>
             </div>
         </section>
-        <!--========== SEND GIFT ===========-->
+        <!--============ SEND GIFT =============== -->
         <section class="send section">
             <div class="send__container bd-container bd-grid">
-               <div class="send__content">
-                    <h2 class="section-title-center send__title">
+                <div class="send__content">
+                    <h2 class="section-title section-title-center send__title">
                         Send Gift Now
                     </h2>
                     <p class="send__description">
-                        Start giving away before the holidays are over. 
-                        Write the home address of the person who will send the gift
+                        Start giving away before the holidays are over. Write the home address of the person who will send the gift.
                     </p>
                     <form action="">
                         <div class="send__direction">
-                            <input type="text" placeholder="House address" class="send__input">
+                            <input type="text"class="send__input" placeholder="House address">
                             <a href="#" class="button">Send</a>
                         </div>
                     </form>
                 </div>
                 <div class="send__img">
-                    <img src="assets/images/send.png" alt="">
+                    <img src="./assets/images/send.png" alt="">
                 </div>
             </div>
         </section>
-        <!--=========== FOOTER ===========-->
-        <footer class="footer section">
-            <div class="footer__container bd-container bd-grid">
-                <div class="footer__content">
-                    <h3 class="footer__title">
-                        <a href="#" class="footer__logo">
-                            Christmas Gift
-                        </a>
-                    </h3>
-                    <p class="footer__description">
-                        I sent a gift and it gives <br> 
-                        happiness
-                    </p>
-                </div>
-                <div class="footer__content">
-                    <h3 class="footer__title">Our Services</h3>
-                    <ul>
-                        <li>
-                            <a href="#" class="footer__link">Pricing</a>
-                        </li>
-                        <li>
-                            <a href="#" class="footer__link">Discounts</a>
-                        </li>
-                        <li>
-                            <a href="#" class="footer__link">Shipping mode</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__content">
-                    <h3 class="footer__title">Our Company</h3>
-                    <ul>
-                        <li>
-                            <a href="#" class="footer__link">Blog</a>
-                        </li>
-                        <li>
-                            <a href="#" class="footer__link">About us</a>
-                        </li>
-                        <li>
-                            <a href="#" class="footer__link">Our mission</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer__content">
-                    <h3 class="footer__title">Social</h3>
-                    <a href="#" class="footer__social">
-                        <i class="bx bxl-facebook-circle"></i>
-                    </a>
-                    <a href="#" class="footer__social">
-                        <i class="bx bxl-twitter"></i>
-                    </a>
-                    <a href="#" class="footer__social">
-                        <i class="bx bxl-instagram-alt"></i>
-                    </a>
-                </div>
-            </div>
-            <p class="footer__copy">&#169; 2023 Bedimcode. All rights reserved</p>
-        </footer>
     </main>
-    
-    <!--========== FOOTER ================-->
-    <footer class="footer section"></footer>
+    <!--=========== FOOTER ===================-->
+    <footer class="footer section">
+        <div class="footer__container bd-container bd-grid">
+            <div class="footer__content">
+                <h3 class="footer__title top_reveal top-reveal-item">
+                    <a href="#" class="footer__logo top_reveal top-reveal-item">
+                        Christmas Gift
+                    </a>
+                </h3>
+                <p class="footer__description top_reveal top-reveal-item">
+                    I sent a gift and it gives <br> happiness
+                </p>
+            </div>
+            <div class="footer__content">
+                <h3 class="footer__title top_reveal top-reveal-item">
+                    Our Company
+                </h3>
+                <ul>
+                    <li class="top_reveal top-reveal-item">
+                        <a href="#" class="footer__link">Blog</a>
+                    </li>
+                    <li class="top_reveal top-reveal-item">
+                        <a href="#" class="footer__link">About us</a>
+                    </li>
+                    <li class="top_reveal top-reveal-item">
+                        <a href="#" class="footer__link">Our mission</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__content">
+                <h3 class="footer__title top_reveal top-reveal-item">
+                    Social
+                </h3>
+                <a href="#" class="footer__social">
+                    <i class="bx bxl-facebook-circle top_reveal top-reveal-item"></i>
+                </a>
+                <a href="#" class="footer__social">
+                    <i class="bx bxl-twitter top_reveal top-reveal-item"></i>
+                </a>
+                <a href="#" class="footer__social">
+                    <i class="bx bxl-instagram-alt top_reveal top-reveal-item"></i>
+                </a>
+
+            </div>
+        </div>
+        <p class="footer__copy top_reveal top-reveal-item">
+            &#169; 2021 Bedimcode. All rights reserved
+        </p>
+    </footer>
 </body>
 </html>
